Migrate exporters